fix: Make tag remove focus ring a circle (#8219)
* fix: Make tag remove focus ring a circle

* adjust position a little

* remove extra margin

* don't adjust size of the actual button

--- a/packages/@adobe/spectrum-css-temp/components/button/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/button/index.css
@@ -378,10 +378,14 @@ a.spectrum-ActionButton {
     box-sizing: border-box;
     &:after {
       transition: unset;
-      left: 4px;
-      right: 4px;
-      bottom: 4px;
-      top: 4px;
+      height: calc(100% - 2px);
+      aspect-ratio: 1;
+      top: 50%;
+      left: 50%;
+      right: unset;
+      bottom: unset;
+      margin: 0;
+      transform: translate(-50%, -50%);
     }
 
     &:focus-visible {
